src/objects/MYBZ_CallPlanningProductJunction__c.object
<CustomObject>
    <fields>
        <fullName>Dataload_Id__c</fullName>
        <externalId>true</externalId>
        <label>Dataload Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Previous_TRx_Units_1M__c</fullName>
        <label>Previous TRx Units 1M</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_TRx_Units_3M__c</fullName>
        <label>Previous TRx Units 3M</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_TRx_Units_6M__c</fullName>
        <label>Previous TRx Units 6M</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TRx_Units_1M__c</fullName>
        <label>TRx Units 1M</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TRx_Units_3M__c</fullName>
        <label>TRx Units 3M</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TRx_Units_6M__c</fullName>
        <label>TRx Units 6M</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
</CustomObject>